# rust-otlp

./: .gitignore  Cargo.toml  README.md
config/: config.yaml
src/: main.rs
